<resources>
    <string name="app_name">HerbMate Discover, Learn, and Apply the Benefits of Herbal Plants</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profile">Profile</string>
    <string name="email_handling">Format email tidak valid</string>
    <string name="password_handling">Password harus lebih dari 8 karakter</string>
    <string name="tampilkan_password">Show Password</string>
    <string name="confirm_password_handling">Password tidak sama</string>
    <string name="confirm_password_empty">Password Kosong</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="forget_password">Forget Password</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="tanaman_herbal">Tanaman Herbal</string>
    <string name="tanaman_lainnya">Tanaman Lainnya</string>
    <string name="resep">Resep :</string>
    <string name="kandungan">Kandungan :</string>
    <string name="asal">Asal :</string>
    <string name="nama_latin">Nama Latin :</string>
    <string name="nama_tanaman">Nama Tanaman</string>
    <string name="temukan_berbagai_tanaman_herbal_lengkap_dengan_informasi_manfaat_dan_cara_penggunaannya">Temukan berbagai tanaman herbal lengkap dengan informasi manfaat dan cara penggunaannya.</string>
    <string name="gunakan_fitur_scan_untuk_mengenali_tanaman_herbal_secara_instan_dengan_bantuan_teknologi_kami">Gunakan fitur scan untuk mengenali tanaman herbal secara instan dengan bantuan teknologi kami.</string>
    <string name="coba_fitur_ai">Coba Fitur AI</string>
    <string name="kosong">Kosong</string>
    <string name="bookmark_kosong">Bookmark Kosong</string>
    <string name="bookmark_button">Bookmark button</string>
    <string name="user_is_already_registered">User is already registered</string>
    <string name="berhasil">Berhasil</string>
    <string name="gagal">Gagal</string>
    <string name="email_not_found">Email not found</string>
    <string name="email_dan_password_tidak_boleh_kosong">Email dan password tidak boleh kosong</string>
    <string name="email_atau_password_salah">Email atau password salah</string>
    <string name="password_salah">Password Salah</string>
    <string name="penyakit">Penyakit</string>
    <string name="email">Email</string>
    <string name="kirim">Kirim</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="selamat_datang_di_herbmate">Selamat Datang di Herbmate!</string>
    <string name="aplikasi_yang_mengenalkanmu_pada_dunia_tanaman_herbal_dan_manfaatnya_untuk_kesehatan">Aplikasi yang mengenalkanmu pada dunia tanaman herbal dan manfaatnya untuk kesehatan.</string>
    <string name="punya_pertanyaan_tentang_tanaman_herbal_tanya_herbbot_asisten_virtual_kami_yang_siap_membantu">Punya pertanyaan tentang tanaman herbal? Tanya HerbBot, asisten virtual kami yang siap membantu!</string>
    <string name="siap_memulai_perjalananmu_dengan_herbmate">Siap memulai perjalananmu dengan Herbmate?</string>
    <string name="mulailah_eksplorasi_sekarang_dan_temukan_manfaatnya">Mulailah eksplorasi sekarang dan temukan manfaatnya!</string>
    <string name="mulai">Mulai</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="upload">Upload</string>
    <string name="timestamp">Timestamp</string>
    <string name="plant">Plant</string>
    <string name="test">Test</string>
    <string name="scan_your_herb_plants">Scan your herb plants</string>
    <string name="place_your_herb_in_the_highlighted_frame_below">Place your herb in the highlighted frame below</string>
    <string name="ketik_pesan">Ketik Pesan</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log Out</string>
    <string name="history">History</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="herbmate_chatbot">HerbMate ChatBot</string>
    <string name="profile">Profile</string>
    <string name="bot">Bot</string>
    <string name="pesan">Pesan</string>
    <string name="efek_samping">Efek Samping :</string>
    <string name="manfaat">Manfaat</string>
    <string name="sumber">sumber</string>


</resources>