<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:padding="12dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_herbmate"
            android:visibility="gone"
            android:contentDescription="@string/profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackAndWhiteColor"
                android:textStyle="bold"
                android:textSize="14sp"
                android:paddingBottom="4dp"
                android:text="@string/bot" />

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackAndWhiteColor"
                android:padding="8dp"
                android:text="@string/pesan"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>